# pulp

./: .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  Settings.toml  docker-compose.yml
migrations/: 20260620152630_init.sql
src/: lib.rs  main.rs
src/app/: app.rs  errors.rs  mod.rs
src/app/controllers/: auth.rs
src/app/extractors/: user_id.rs
src/app/middleware/: mod.rs  session.rs  tracing.rs
src/data/: errors.rs  mod.rs
src/data/models/: api_key.rs  user.rs
src/data/repositories/: api_key.rs  mod.rs  user.rs
src/infrastructure/: database.rs  errors.rs  logging.rs  mod.rs  redis.rs
src/infrastructure/config/: config.rs  config.yaml  mod.rs
src/service/: errors.rs  mod.rs
src/service/auth/: service.rs
src/shared/: errors.rs  mod.rs  password.rs
tests/: api_keys.rs  auth.rs  health.rs
tests/common/: mod.rs
